# cgroups

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
cgroup1/: BUILD.bazel
cgroup1/stats/: BUILD.bazel
cgroup2/: BUILD.bazel  manager.go  manager_test.go
cgroup2/stats/: BUILD.bazel  metrics.proto
cmd/cgctl/: BUILD.bazel
