###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "gazelle", version = "0.39.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")