load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cgroup1",
    srcs = [
        "blkio.go",
        "cgroup.go",
        "control.go",
        "cpu.go",
        "cpuacct.go",
        "cpuset.go",
        "devices.go",
        "errors.go",
        "freezer.go",
        "hierarchy.go",
        "hugetlb.go",
        "memory.go",
        "named.go",
        "net_cls.go",
        "net_prio.go",
        "opts.go",
        "paths.go",
        "perf_event.go",
        "pids.go",
        "rdma.go",
        "state.go",
        "subsystem.go",
        "systemd.go",
        "ticks.go",
        "utils.go",
        "v1.go",
    ],
    importpath = "github.com/containerd/cgroups/cgroup1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_containerd_cgroups_v3//:go_default_library",
        "@com_github_containerd_cgroups_v3//cgroup1/stats:go_default_library",
        "@com_github_coreos_go_systemd_v22//dbus:go_default_library",
        "@com_github_docker_go_units//:go_default_library",
        "@com_github_godbus_dbus_v5//:go_default_library",
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "cgroup1_test",
    srcs = [
        "blkio_test.go",
        "cgroup_test.go",
        "cpuacct_test.go",
        "memory_test.go",
        "mock_test.go",
        "named_test.go",
        "paths_test.go",
        "pids_test.go",
        "testutil_test.go",
    ],
    embed = [":cgroup1"],
    deps = [
        "@com_github_containerd_cgroups_v3//:go_default_library",
        "@com_github_containerd_cgroups_v3//cgroup1/stats:go_default_library",
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
