load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cgroup2",
    srcs = [
        "cpu.go",
        "devicefilter.go",
        "ebpf.go",
        "errors.go",
        "hugetlb.go",
        "io.go",
        "manager.go",
        "memory.go",
        "paths.go",
        "pids.go",
        "rdma.go",
        "state.go",
        "utils.go",
    ],
    importpath = "github.com/containerd/cgroups/cgroup2/v3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cilium_ebpf//:go_default_library",
        "@com_github_cilium_ebpf//asm:go_default_library",
        "@com_github_cilium_ebpf//link:go_default_library",
        "@com_github_coreos_go_systemd_v22//dbus:go_default_library",
        "@com_github_godbus_dbus_v5//:go_default_library",
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
        "//cgroup2/stats",
    ],
)

go_test(
    name = "cgroup2_test",
    srcs = [
        "cpuv2_test.go",
        "devicefilter_test.go",
        "hugetlbv2_test.go",
        "iov2_test.go",
        "manager_test.go",
        "memoryv2_test.go",
        "paths_test.go",
        "pidsv2_test.go",
        "testutils_test.go",
        "utils_test.go",
    ],
    embed = [":cgroup2"],
    deps = [
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
