load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "stats_proto",
    srcs = ["metrics.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "stats_go_proto",
    importpath = "github.com/containerd/cgroups/cgroup1/stats",
    proto = ":stats_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "stats",
    srcs = ["doc.go"],
    embed = [":stats_go_proto"],
    importpath = "github.com/containerd/cgroups/cgroup1/stats",
    visibility = ["//visibility:public"],
)
