load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cgctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/containerd/cgroups/cmd/cgctl",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_containerd_cgroups_v3//:go_default_library",
        "@com_github_containerd_cgroups_v3//cgroup2:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)

go_binary(
    name = "cgctl",
    embed = [":cgctl_lib"],
    visibility = ["//visibility:public"],
)
